# NovoTasks

./: Description.docx  README.md
task_1/: CMakeLists.txt
task_1/include/: Colliding.hpp  LineFunction.hpp  TaskStructs.hpp
task_1/src/: task1.cpp
task_2/: CMakeLists.txt
task_2/include/: LineFunction.hpp  utils.hpp
task_2/src/: main.cpp
task_3/: CMakeLists.txt
task_3/include/: Cropping.hpp
task_3/src/: test.cpp
